@@ -5,6 +5,7 @@ Little improvements to the device capabilities detection.
 Once again improved writing speed detection. Hopefully this is the last time. ;)
 Do not warn about cdrecord not running suid root on kernel 2.6.8 and above
 K3bSetup now removes the suid root bit on kernel 2.6.8 an above systems.
+K3bSetup now also sets the proper permissions on the generic devices.
 	
 0.11.17
 Fixed some DVD writing speed detection issues.
